Fix contrast warning

--- a/resources/scss/components/_carousel.scss
+++ b/resources/scss/components/_carousel.scss
@@ -39,6 +39,7 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: auto 70%;
+	color: $black;
 	flex: 1 0 100%;
 	font-size: 0;
 	scroll-snap-align: start;
